--- a/src/app/modules/menu-layout/components/contracts/factura-ehh/factura-ehh.component.html
+++ b/src/app/modules/menu-layout/components/contracts/factura-ehh/factura-ehh.component.html
@@ -1,14 +1,176 @@
-<div *ngIf="dataPosition; else Guardar">
-    <button nz-button nzSize="small" nzType="primary" (click)="showModal()"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
-</div>
-<ng-template #Guardar>
-    <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nuevo Registro</span></button>
-</ng-template>
-<nz-modal [(nzVisible)]="isVisible" nzTitle="Contrato" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()" [nzStyle]="{ top: '5px' }">
+
+<button nz-button [nzType]="'primary'" (click)="showModal()" nzSize="small"><i nz-icon nzTheme="outline" nzType="plus"></i></button>
+<nz-modal [(nzVisible)]="isVisible" nzTitle="Factura EEH" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()" [nzStyle]="{ top: '5px' }">
     <ng-container *nzModalContent>
 
-    <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
-        <p>PRUEBA</p>
-    </form>
+        <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
+            <div nz-row>
+                <div nz-col>
+                    <nz-form-item  nzFlex>
+                        <nz-form-control>
+                            <label>Fecha de vencimiento</label>
+                            <div nz-row>
+                              <nz-range-picker style="width: 475px;" formControlName="fechaVencimiento" [nzRanges]="ranges"></nz-range-picker>
+                            </div>
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+            </div>
+            <div nz-row>
+                <div nz-col>
+                    <nz-form-item  nzFlex>
+                        <nz-form-control>
+                            <label>Fecha de facturación</label>
+                            <div nz-row>
+                              <nz-range-picker style="width: 475px;" formControlName="fechaFacturacion" [nzRanges]="ranges"></nz-range-picker>
+                            </div>
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+            </div>
+            
+            <div nz-row>
+
+              <div nz-col>
+                  <nz-form-item  nzFlex>
+                      <nz-form-control>
+                          <label>Consumo en KWh</label>
+                          <div nz-row>
+                            <nz-input-number style="width: 190px;" [nzMin]="1" [nzStep]="1" formControlName="consumoEnergeticoKwh"></nz-input-number>
+                          </div>
+                      </nz-form-control>
+                  </nz-form-item>
+              </div>
+
+              <div nz-col nzOffset="4">
+                <label>Tarifa</label>
+                <nz-form-item  nzFlex>
+                  <nz-form-control>     
+                    <nz-select nzMode="tags" nzPlaceHolder="Tag Mode" style="width: 200px;" formControlName="tarifaId">
+                      <nz-option *ngFor="let option of listOfOption" [nzLabel]="option.label" [nzValue]="option.value"></nz-option>
+                    </nz-select>
+                  </nz-form-control>
+                </nz-form-item>
+              </div>
+
+          </div>
+
+          <div nz-row>
+            
+            <div nz-col>
+              <label>Total costo energia (Lps.)</label>
+              <nz-form-item  nzFlex>
+                <nz-form-control>
+                  <nz-input-number style="width: 190px;" [nzMin]="1" [nzStep]="1" formControlName="totalCostoEnergia"></nz-input-number>
+                </nz-form-control>
+              </nz-form-item>
+            </div>
+
+            <div nz-col nzOffset="4">
+              <label>Cargos</label>
+              <nz-form-item  nzFlex>
+                <nz-form-control>     
+                  <nz-select nzMode="tags" nzPlaceHolder="Tag Mode" style="width: 200px;" formControlName="cargoId">
+                    <nz-option *ngFor="let option of listOfOption" [nzLabel]="option.label" [nzValue]="option.value"></nz-option>
+                  </nz-select>
+                </nz-form-control>
+              </nz-form-item>
+            </div>
+
+
+          </div>
+          
+          <div nz-row>
+            
+          <div nz-col>
+            <label>Total cargos</label>
+            <nz-form-item  nzFlex>
+              <nz-form-control>   
+                <nz-input-number style="width: 473px;" [nzMin]="1" [nzStep]="1" [nzDisabled]="true" formControlName="totalCargos"></nz-input-number>
+              </nz-form-control>
+            </nz-form-item>
+          </div>
+
+          
+        </div>
+
+        </form>
+        <br>  
+  
+        <div nz-row class="row-4">
+            
+            <div nz-col nzOffset="19" nzSpan="1">
+                <button nz-button (click)="cleanForm()"><i nz-icon nzTheme="outline" nzType="clear"></i></button>
+            </div>
+            <div nz-col nzOffset="1" nzSpan="1" >
+                    <button *ngIf="!editIsActive; else edit" nz-button ><i nz-icon nzTheme="outline" nzType="save"></i></button>
+            </div>
+            <ng-template #edit>
+                <button nz-button><i nz-icon nzTheme="outline" nzType="save"></i></button>
+    
+            </ng-template>
+    
+        </div>
+    
+        <br>  
+        <div nz-row>
+            <div nz-col>
+              <div *ngIf="!IsDisable ; else enableClients">
+                <button nz-button [nzType]="'primary'" ><span>Mostrar desabilitados</span></button>
+              </div>
+              <ng-template #enableClients>
+                <button nz-button [nzType]="'primary'" ><span>Mostrar Habilitados</span></button>
+              </ng-template>
+          
+            </div>
+        </div>
+          <br> 
+                 
+              <div nz-row class="row-6">
+                  <div nz-col>
+                      <nz-table #table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '900px', y: '240px' }"  [nzPageSize]="10">
+                      <thead>
+                          <tr>
+                          <th nzLeft nzWidth="80px">Acciones</th>
+                          <th
+                              *ngFor="let column of listOfColumns"
+                              [nzSortOrder]="column.sortOrder"
+                              [nzSortFn]="column.sortFn"
+                              [nzSortDirections]="column.sortDirections"
+                              [nzFilterMultiple]="column.filterMultiple"
+                              [nzFilters]="column.listOfFilter"
+                              [nzFilterFn]="column.filterFn"
+                              nzWidth="150px"
+                          >
+                              {{ column.name }}
+                          </th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr *ngFor="let data of table.data">
+                            <td nzLeft>
+                              <div nz-row>
+                                <div nz-col>
+                                  <button class="edit" nzSize="small" nz-button nzType="primary" ><i nz-icon nzType="edit" nzTheme="outline"></i></button>
+                                </div>
+                                <div nz-col nzOffset="1">
+                                  <button *ngIf="data.estado; else enable" class="delete" nzSize="small" nz-button nzType="primary" nzDanger ><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                                  <ng-template #enable>
+                                    <button class="delete" nzSize="small" nz-button nzType="primary"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+
+                                  </ng-template>
+                                  
+                                </div>
+                              </div>
+                            </td>
+                          <td>{{data.codigoMedidor}}</td>
+                          <td>{{data.fechaInicial   | date:'dd/M/yyyy'  }}</td>
+                          <td >{{data.fechaFinal  | date:'dd/M/yyyy'  }}</td>
+                          </tr>
+                      </tbody>
+                      </nz-table>
+                      
+                  </div>
+              </div>
     </ng-container>
 </nz-modal>
