--- a/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
@@ -1,31 +1,15 @@
 
-<button nz-button [nzType]="'primary'" (click)="showModal()" nzSize="small"><i nz-icon nzTheme="outline" nzType="plus"></i></button>
-<nz-modal [(nzVisible)]="isVisible" nzTitle="Factura EEH" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()" [nzStyle]="{ top: '5px' }">
+<button nz-button nzType="primary" nzSize="small" (click)="showModal()"><i nz-icon nzTheme="outline" nzType="plus"></i></button>
+<nz-modal [(nzVisible)]="isVisible" nzTitle="Cargos" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()" [nzStyle]="{ top: '5px' }">
     <ng-container *nzModalContent>
 
         <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
-
-            <div nz-row>
-              <div nz-col>
-                <nz-form-item  nzFlex>
-                  <nz-form-control>
-                    <label>Codigo de Factura</label>
-                    <div nz-row>
-                      <input nz-input type="text" formControlName="codigo" style="width: 475px;">
-                    </div>
-                  </nz-form-control>
-                </nz-form-item>
-              </div>
-            </div>
-
             <div nz-row>
                 <div nz-col>
+                    <label>Nombre</label>
                     <nz-form-item  nzFlex>
                         <nz-form-control>
-                            <label>Fecha de vencimiento</label>
-                            <div nz-row>
-                              <nz-range-picker style="width: 475px;" formControlName="fechaVencimiento" [nzRanges]="ranges"></nz-range-picker>
-                            </div>
+                            <input nz-input formControlName="nombre" type="text" style="width: 475px;">
                         </nz-form-control>
                     </nz-form-item>
                 </div>
@@ -33,24 +17,22 @@
 
             <div nz-row>
                 <div nz-col>
+                    <label>Valor en Lps.</label>
                     <nz-form-item  nzFlex>
                         <nz-form-control>
-                            <label>Fecha de facturación</label>
-                            <div nz-row>
-                              <nz-range-picker style="width: 475px;" formControlName="fechaFacturacion" [nzRanges]="ranges"></nz-range-picker>
-                            </div>
+                            <nz-input-number formControlName="valor" [ngModel]="0"  [nzPlaceHolder]="'460'" [nzStep]="1" [nzMin]="0" style="width: 475px;"></nz-input-number>
                         </nz-form-control>
                     </nz-form-item>
                 </div>
             </div>
-            
+
         </form>
         <br>  
   
         <div nz-row class="row-4">
             
             <div nz-col nzOffset="19" nzSpan="1">
-                <button nz-button (click)="cleanForm()"><i nz-icon nzTheme="outline" nzType="clear"></i></button>
+                <button nz-button (click)="CleanForm()"><i nz-icon nzTheme="outline" nzType="clear"></i></button>
             </div>
             <div nz-col nzOffset="1" nzSpan="1" >
                     <button *ngIf="!editIsActive; else edit" nz-button ><i nz-icon nzTheme="outline" nzType="save"></i></button>
@@ -78,27 +60,27 @@
                  
               <div nz-row class="row-6">
                   <div nz-col>
-                      <nz-table #table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '900px', y: '240px' }"  [nzPageSize]="10">
+                      <nz-table #table [nzData]="listOfData" nzTableLayout="fixed"  [nzPageSize]="10">
                       <thead>
                           <tr>
-                          <th nzLeft nzWidth="90px">Acciones</th>
+                          <th nzWidth="70px">Acciones</th>
                           <th
                               *ngFor="let column of listOfColumns"
                               [nzSortOrder]="column.sortOrder"
                               [nzSortFn]="column.sortFn"
                               [nzSortDirections]="column.sortDirections"
                               [nzFilterMultiple]="column.filterMultiple"
+                              [nzFilters]="column.listOfFilter"
                               [nzFilterFn]="column.filterFn"
                               nzWidth="150px"
                           >
                               {{ column.name }}
                           </th>
-                          <th nzRight nzWidth="80px">Cargos</th>
                           </tr>
                       </thead>
                       <tbody>
                           <tr *ngFor="let data of table.data">
-                            <td nzLeft>
+                            <td>
                               <div nz-row>
                                 <div nz-col>
                                   <button class="edit" nzSize="small" nz-button nzType="primary" ><i nz-icon nzType="edit" nzTheme="outline"></i></button>
@@ -113,15 +95,8 @@
                                 </div>
                               </div>
                             </td>
-                          <td>{{data.codigo}}</td>
-                          <td>{{data.fechaEmision   | date:'dd/M/yyyy'}}</td>
-                          <td>{{data.fechaVencimiento   | date:'dd/M/yyyy'}}</td>
-                          <td>{{data.fechaInicial   | date:'dd/M/yyyy'}}</td>
-                          <td>{{data.fechaFinal   | date:'dd/M/yyyy'}}</td>
-
-                          <td nzRight nzAlign="center">
-                            <app-modal-cargos-eeh></app-modal-cargos-eeh>
-                          </td>
+                          <td>{{data.nombre}}</td>
+                          <td>{{data.valor}}</td>
                           </tr>
                       </tbody>
                       </nz-table>
