--- a/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
@@ -20,7 +20,7 @@
                     <label>Valor en Lps.</label>
                     <nz-form-item  nzFlex>
                         <nz-form-control>
-                            <nz-input-number formControlName="valor" [ngModel]="0"  [nzPlaceHolder]="'460'" [nzStep]="1" [nzMin]="0" style="width: 475px;"></nz-input-number>
+                            <nz-input-number formControlName="valor" [ngModel]="0"  [nzPlaceHolder]="'460'" [nzStep]="1" [nzMin]="0" style="width: 475px;" (ngModelChange)="UpdateTotalCargos($event)"></nz-input-number>
                         </nz-form-control>
                     </nz-form-item>
                 </div>
@@ -46,15 +46,15 @@
     
         <br>  
         <div nz-row>
-            <div nz-col>
-              <div *ngIf="!IsDisable ; else enableClients">
-                <button nz-button [nzType]="'primary'" ><span>Mostrar desabilitados</span></button>
-              </div>
-              <ng-template #enableClients>
-                <button nz-button [nzType]="'primary'" ><span>Mostrar Habilitados</span></button>
-              </ng-template>
-          
+          <div nz-col>
+            <div *ngIf="!IsDisable ; else enableClients">
+              <button nz-button [nzType]="'primary'" (click)="filterCargos(false, true)"><span>Mostrar desabilitados</span></button>
             </div>
+            <ng-template #enableClients>
+              <button nz-button [nzType]="'primary'" (click)="filterCargos(true, true)"><span>Mostrar Habilitados</span></button>
+            </ng-template>
+        
+          </div>
         </div>
           <br> 
                  
@@ -83,12 +83,12 @@
                             <td>
                               <div nz-row>
                                 <div nz-col>
-                                  <button class="edit" nzSize="small" nz-button nzType="primary" ><i nz-icon nzType="edit" nzTheme="outline"></i></button>
+                                  <button class="edit" nzSize="small" nz-button nzType="primary" (click)="editableForm(data)"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
                                 </div>
                                 <div nz-col nzOffset="1">
-                                  <button *ngIf="data.estado; else enable" class="delete" nzSize="small" nz-button nzType="primary" nzDanger ><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                                  <button *ngIf="data.estado; else enable" class="delete" nzSize="small" nz-button nzType="primary" nzDanger (click)="disable(data, false)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
                                   <ng-template #enable>
-                                    <button class="delete" nzSize="small" nz-button nzType="primary"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+                                    <button class="delete" nzSize="small" nz-button nzType="primary"><i nz-icon nzType="undo" nzTheme="outline" (click)="disable(data, true)"></i></button>
 
                                   </ng-template>
                                   
@@ -102,6 +102,15 @@
                       </nz-table>
                       
                   </div>
+              </div>
+              
+              <div nz-row>
+                <div nz-col>
+                  <label>{{"Total Cargos Lps."}}</label>
+                </div>
+                <div nz-col nzOffset="1">
+                  <nz-input-number [ngModel]="total" [nzDisabled]="true"></nz-input-number>
+                </div>
               </div>
     </ng-container>
 </nz-modal>
