--- a/src/app/shared/components/menu-layout/menu-layout.component.html
+++ b/src/app/shared/components/menu-layout/menu-layout.component.html
@@ -145,7 +145,10 @@
     <nz-content>
       <div class="inner-content">
         <router-outlet></router-outlet>
+        <nz-back-top [nzVisibilityHeight]="100">
+        </nz-back-top>
       </div>
+      
     </nz-content>
   </nz-layout>
 </nz-layout>
