coneccion con db iondata completada

--- a/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
+++ b/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
@@ -7,10 +7,11 @@
   </div>
 </div>
 <div nz-row class="row-1" class="generar-facturas">
-  
+<!--   
     <div nz-col nzSpan="3">
       <app-modal-new-invoices  [ListOfCharges]="ListOfCharges" [ListOfContractMeditors]="ListOfContractMeditors" (DataUpdated)="updateTable($event)"></app-modal-new-invoices>
-    </div>
+    </div> -->
+    
     <div nz-col nzSpan="3">
       <button nz-button nzType="primary" nzSize="default" >Emitir todas</button>
     </div>
