--- a/src/app/modules/menu-layout/components/meters/meters.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters.component.html
@@ -27,7 +27,7 @@
 
   <div nz-col>
 
-    <app-meters-modal [listOfMPoinst]="listOfMPoinst" (DataUpdated)="updateTable($event)"></app-meters-modal>
+    <app-meters-modal [listOfMPoinst]="listOfMPoinst" (DataUpdated)="updateTable($event)" [listOfSourceId]="listOfSource"></app-meters-modal>
 
   </div>
 </div>
