--- a/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
@@ -34,7 +34,7 @@
                         <nz-select formControlName="clasificacion" class="inputMedium" (ngModelChange)="filterActores($event)">
                             <nz-option nzLabel="Proveedor" nzValue="P"></nz-option>
                             <nz-option nzLabel="Cliente" nzValue="C"></nz-option>
-                            <nz-option nzLabel="Servicios comunitarios" nzValue="I"></nz-option>
+                            <!-- <nz-option nzLabel="Servicios comunitarios" nzValue="I"></nz-option> -->
                         </nz-select>                   
                     </nz-form-control>
                     </nz-form-item>
