--- a/src/app/shared/components/menu-layout/menu-layout.component.html
+++ b/src/app/shared/components/menu-layout/menu-layout.component.html
@@ -78,12 +78,12 @@
 
       <li nz-submenu nzOpen nzTitle="Facturacion" nzIcon="calculator">
         <ul>
-          <div routerLink="especial-charges" nz-menu-item nzMatchRouter>
+          <!-- <div routerLink="especial-charges" nz-menu-item nzMatchRouter>
             <li>
                 <i nz-icon nzType="file-text"></i>
                 <span >Cargos especiales</span>
             </li>
-          </div>
+          </div> -->
           <li nz-submenu nzOpen nzTitle="Facturas" nzIcon="container">
             <ul>
 
