--- a/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
@@ -6,7 +6,7 @@
               <div nz-col>
                   <label>Fecha de RollOver</label>
                   <div nz-row>
-                          <nz-range-picker formControlName="fecha" style="width: 475px;" [nzRanges]="ranges" ngModel (ngModelChange)="onChange($event)"></nz-range-picker>
+                          <nz-range-picker formControlName="fecha" [nzShowTime]="true" style="width: 475px;" [nzRanges]="ranges" ngModel (ngModelChange)="onChange($event)"></nz-range-picker>
                   </div>
     
               </div>
