--- a/src/app/modules/menu-layout/components/meters/manual-registration-modal/manual-registration-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/manual-registration-modal/manual-registration-modal.component.html
@@ -40,7 +40,7 @@
                           <div nz-row>
                               <nz-form-item  nzFlex>
                                   <nz-form-control >
-                                      <nz-date-picker class="inputMedium" formControlName="fecha"></nz-date-picker>
+                                      <nz-date-picker class="inputMedium" formControlName="fecha" [nzShowTime]="true"></nz-date-picker>
                                   </nz-form-control>
                               </nz-form-item>
                           </div>
@@ -112,7 +112,7 @@
                       <td>{{ data.id }}</td>
                       <td>{{ data.codigo }}</td>
                       <td>{{ data.descripcion }}</td>
-                      <td>{{ data.fecha  | date:'dd/M/yyyy' }}</td>
+                      <td>{{ data.fecha  | date:'yyyy/M/dd' }}</td>
                       <td>{{ data.valor }}</td>
                     </tr>
                   </tbody>
