--- a/src/app/modules/menu-layout/components/contracts/modal-medidores/modal-medidores.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-medidores/modal-medidores.component.html
@@ -14,7 +14,7 @@
                     <nz-form-item>
                       <nz-form-control>
                         <nz-select  style="width: 230px;" nzSize="large" nzMode="default" nzPlaceHolder="12983718" formControlName="medidorId">
-                          <nz-option *ngFor="let meter of listOfMeters" [nzLabel]="meter.codigo" [nzValue]="meter.id"></nz-option>
+                          <nz-option *ngFor="let meter of listOfMeters" [nzLabel]="meter.descripcion" [nzValue]="meter.id"></nz-option>
                         </nz-select>
                       </nz-form-control>
                     </nz-form-item>
@@ -160,7 +160,7 @@
                                   </div>
                                 </div>
                               </td>
-                            <td>{{data.codigoMedidor}}</td>
+                            <td>{{data.descripcion}}</td>
                             <td>{{data.fechaInicial   | date:'dd/M/yyyy'  }}</td>
                             <td >{{data.fechaFinal  | date:'dd/M/yyyy'  }}</td>
                             </tr>
